<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteFormActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:menu="@menu/option_menu"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_title_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_input_box"
            android:padding="16dp"
            android:textSize="24sp"
            android:hint="@string/title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/note_date_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/tanggal"
        android:textColor="@color/grey_text_darker"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/note_title_input_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_desc_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/note_date_created"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_desc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_input_box"
            android:padding="16dp"
            android:maxLength="1000"
            android:hint="@string/isi_catatan"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/char_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/char_count"
        android:textSize="12sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/note_desc_input_layout"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>